src/test/deca/context/invalid/provided/initialisation-incompatible2.deca
/*/ Description:
//    Initialisation et typage
//
// Resultats:
//    Ligne 10: Affectation de types incompatibles.
//
// Historique:
//    cree le 01/01/2022*/
{
   int a=false;
   
}
